# PROTEUS

./: CMakeLists.txt  PROTEUS.py  PROTEUS_installer_2.0.0.dmg  PROTEUS_installer_v2.0.1.dmg  PROTEUS_installer_v2.0.2.dmg  README.md  c__prm.f90  compile.sh  e__main.f90  p__EUVAC.f90  p__UV.f90  p__eddy_diffusion.f90  p__io.f90  p__molecular_diffusion.f90  p__photochem_opticaldepth.f90  p__photochem_rate.f90  p__photochem_scheme.f90  p__photochem_transport.f90  p__search.f90  v__Earth.f90  v__Jupiter.f90  v__Mars.f90  v__Venus.f90  v__tdec.f90
Jupiter/Nakamura_22_Case1/: v__in.f90
Mars/Neutral_atmosphere/: v__in.f90
UV/: Claire_2012_Sun3.8Ga.txt  UVflux.plt  flux_photon_1-1000nm.txt
UV/xct_data/: sigmaNO2.f90  sigmaO3.f90
Venus/Krasnopolsky_2007/: plot2.plt  v__in.f90
Venus/Krasnopolsky_2007_no-S/: v__in.f90
Venus/Krasnopolsky_2013/: plot2.plt  v__in.f90
Workspace/: planet_project_list.json
Workspace/Jupiter/: reaction_list.txt
Workspace/Mars/: reaction_list.txt
Workspace/reaction_list_template/: CHO_chemistry.txt  Jupiter_ionosphere.txt  Jupiter_ionosphere_with_metalic_ions.txt
Workspace/src/: HEUVAC.F  c__prm.f90  e__main.f90  excited_states_list.json  p__EUV.f90  p__EUVAC.f90  p__UV.f90  p__chemical_scheme.f90  p__eddy_diffusion.f90  p__io.f90  p__io_win.f90  p__molecular_diffusion.f90  p__photochem_rate.f90  p__photochem_scheme.f90  p__photochem_transport.f90  p__photoionization_rate.f90  p__photolysis_rate.f90  p__search.f90  p__vertical_diffusion.f90  v__Earth.f90  v__Jupiter.f90  v__Mars.f90  v__Venus.f90  v__tdec.f90
(+10 files in other folders)
